fixed text align and color after merge

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 }
 
 div.centered      { width: 2vh; }
-div#columns       { width: 750px;  margin: 0 auto;}
-div#columns div   { width: 4vh; height: 4vh; float: left; text-align: center; outline-style: solid;}
+div#columns       { width: 1000px;  margin: 0 auto;}
+div#columns div   { width: 4vh; height: 4vh; float: left; text-align: center; outline-style: solid; padding: 2px;}
 div.col           { margin-bottom: 10px; margin-right: 10px; text-align: center;}
 div.red           { background-color: #e14e32; }
 div.green         { background-color: lightgreen; }
